# streaming

./: .envrc  .gitignore  readme.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.tsx  Home.tsx  Play.tsx  atoms.ts  db.ts  db.tsx  utils.ts
client/src/components/: App.tsx  ErrorBoundary.tsx  Example.tsx  Header.module.css  Header.tsx  Home.tsx  Play.tsx  ThumbnailList.tsx  Upload.tsx
client/src/types/: Video.tsx
release/: .envrc  Makefile  build-db.mk  info.hotoku.streaming.plist.jinja  prefix.json  readme.md  release.mk  run
release/db/: Makefile  create.sql  load.py
server/: .dir-locals.el  .gitignore  Makefile  prefix.json  pyproject.toml  source_list.json
server/db/: Makefile  create.sql  load.py
server/resource/videos/: doit.sh  duplicate.sh
server/serveer/: __main__.py
server/server/: __init__.py  __main__.py  db.py  environment_variables.py  server.py
server/setup/: __main__.py
server/test_server/: conftest.py  test_db.py  test_server.py
server/thumbnail/: __main__.py  lib.py  tasks.py
streaming-client/: package.json
