[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
Flask = "^2.2.0"
luigi = "^3.1.1"
pytest = "^7.1.3"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pyright = "^1.1.269"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
